docs: add web and mobile authentication guides

--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,17 @@
 {
   "$schema": "https://jsr.io/schema/config-file.v1.json",
   "name": "@tijs/atproto-oauth",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "license": "MIT",
   "exports": "./mod.ts",
   "publish": {
-    "include": ["mod.ts", "src/**/*.ts", "README.md", "LICENSE"],
+    "include": [
+      "mod.ts",
+      "src/**/*.ts",
+      "docs/**/*.md",
+      "README.md",
+      "LICENSE"
+    ],
     "exclude": ["**/*.test.ts"]
   },
   "imports": {
